fixed alignment in hero section

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -42,6 +42,12 @@
                         text-align: right;
                     }
 
+                    #channel-owner #channel-user{
+                        p{
+                            
+                        }
+                    }
+
                     .designer{
                         h2{
                             text-align: right;
@@ -60,42 +66,45 @@
                         /* margin-block-end: var(--spacing); */
                     }
 
-                    
-                    h1{
-                        font-size: var(--h1-size) ;
-                        font-weight: 700;
-                        display: inline;
-                        width: fit-content;
-                    }
-                    
-                    p{
-                        text-align: center;
-                        margin: 0 auto;
-                        color: #08183aa9;
-                    }
-                    
-                    h1,p{
-                        background: rgba(255, 255, 255, 0.636);
-                        box-shadow: 0px 0px 20px 12px rgba(255, 255, 255, 0.636);
-                    }
-
-                    .updated-date{
-                        display: flex;
-                        width: fit-content;
-                        align-self: center;
-                        gap: 0.5rem;
-                    }
-
-                    p+p{
-                        font-weight: 600;
-                    }
-
                     .hero-content{
                         display: flex;
+                        flex-direction: column;
                         align-items: center;
-                        justify-content: space-between;
+                        /* justify-content: space-between; */
+                        gap: 0.5rem;
                         width: 100%;
+
+                        h1{
+                            font-size: var(--h1-size) ;
+                            font-weight: 700;
+                            display: inline;
+                            width: fit-content;
+                        }
+                        
+                        p{
+                            text-align: center;
+                            margin: 0 auto;
+                            color: #08183aa9;
+                        }
+                        
+                        h1,p{
+                            background: rgba(255, 255, 255, 0.636);
+                            box-shadow: 0px 0px 20px 12px rgba(255, 255, 255, 0.636);
+                        }
+    
+                        .updated-date{
+                            display: flex;
+                            width: fit-content;
+                            align-self: center;
+                            gap: 0.5rem;
+                        }
+    
+                        p+p{
+                            font-weight: 600;
+                        }
+    
                     }
+                    
                     
                 }
                 
